@@ -17,8 +17,8 @@
 package org.operaton.bpm.engine.test.bpmn.parse;
 
 import java.text.SimpleDateFormat;
-import java.util.Arrays;
 import java.util.Date;
+import java.util.List;
 
 import org.apache.commons.lang3.time.DateUtils;
 import org.junit.jupiter.api.BeforeEach;
@@ -270,7 +270,7 @@ class RetryIntervalsConfigurationTest extends AbstractAsyncOperationsTest {
     ClockUtil.setCurrentTime(currentTime);
 
     Job job = managementService.createJobQuery().processInstanceId(processInstanceId).singleResult();
-    managementService.setJobRetries(Arrays.asList(job.getId()), 5);
+    managementService.setJobRetries(List.of(job.getId()), 5);
 
     jobRetries = executeJob(processInstanceId);
     assertThat(jobRetries).isEqualTo(4);
